JSAI/error/src/test/resources/base/v028.js

var x = "foo";

x += 1;
print(x);

x++;
print(x);